--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,9 +1,9 @@
-<mat-toolbar color="primary" class="navbar">
+<mat-toolbar [class.scrolled]="isScrolled" class="navbar">
   <span>NOW UI KIT PRO ANGULAR</span>
   <span class="spacer"></span>
   <a mat-button href="#">DOCUMENTATION</a>
   <a mat-button href="#">COMPONENTS</a>
   <a mat-button href="#">SECTIONS</a>
   <a mat-button href="#">EXAMPLES</a>
-  <button mat-button color="accent">Buy now</button>
+  <button mat-button>Buy now</button>
 </mat-toolbar>
