--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -3,7 +3,12 @@
   top: 0;
   width: 100%;
   z-index: 1000;
-  transition: top 0.3s;
+  background-color: transparent !important;
+  transition: background-color 0.3s ease;
+}
+
+.navbar.scrolled {
+  background-color: rgba(255, 255, 255, 0.95) !important;
 }
 
 .spacer {
@@ -17,10 +22,10 @@ a {
 }
 
 button[mat-button] {
-  background-color: orange;
+  background-color: #ff3636;
   color: white;
 }
 
 button[mat-button]:hover {
-  background-color: darkorange;
+  background-color: #e33232;
 }
