--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,9 +1,5 @@
 <div class="footer">
-  <div class="footer-left">
-    <a href="#">ABOUT US</a>
-    <a href="#">BLOG</a>
-  </div>
-  <div class="footer-right">
-    &copy; 2024, Desarrollado por Mamuto's Company.
+  <div>
+    &copy; 2024, Desarrollado por Mamuto's.
   </div>
 </div>
