--- a/src/app/shared/home/home.component.css
+++ b/src/app/shared/home/home.component.css
@@ -1,21 +1,46 @@
-.hero-image {
-    background-image: url('./../../../assets/images/home.jpg');
-    background-size: cover;
-  background-position: center;
+:host {
+  display: block;
   height: 100vh;
-  position: relative;
-  text-align: center;
-  color: white;
-  font-family: 'Roboto', sans-serif;
-  padding-top: 64px; /* Agregar un margen superior para que el contenido no quede detrás del navbar */
 }
 
-.hero-text {
+ngb-carousel {
+  height: 100%;
+  outline: none;
+}
+
+.picsum-img-wrapper {
+  height: 100vh;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.picsum-img-wrapper img {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel-caption {
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 2rem;
+  bottom: auto;
+  transform: translateY(-50%);
+  text-align: left;
+  left: 15%;
+  right: 15%;
+}
+
+h1 {
+  font-size: 3.5rem;
+  margin-bottom: 1rem;
+}
+
+p {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
 }
 
 .social-buttons {
@@ -26,4 +51,14 @@
   background-color: transparent;
   color: white;
   margin: 0 0.5rem;
+}
+
+/* Estilos para los controles del carrusel */
+::ng-deep .carousel-control-prev,
+::ng-deep .carousel-control-next {
+  width: 5%;
+}
+
+::ng-deep .carousel-indicators {
+  bottom: 30px;
 }
