--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,22 +1,22 @@
-<mat-toolbar class="navbar">
-  <a mat-button href="#" class="logo">Logo</a>
-  <span class="spacer"></span>
-  <div class="nav-links">
-    <a mat-button href="#">hombre</a>
-    <a mat-button href="#">mujer</a>
-    <a mat-button href="#">accesorios</a>
-    <a mat-button href="#" class="sale">rebajas</a>
-  </div>
-  <span class="spacer"></span>
-  <div class="icons">
-    <button mat-icon-button>
-      <mat-icon>person_outline</mat-icon>
-    </button>
-    <button mat-icon-button>
-      <mat-icon>search</mat-icon>
-    </button>
-    <button mat-icon-button>
-      <mat-icon>shopping_bag</mat-icon>
-    </button>
-  </div>
+<mat-toolbar class="navbar" [ngClass]="{'scrolled': isScrolled}">
+    <a mat-button href="#" class="logo">Logo</a>
+    <span class="spacer"></span>
+    <div class="nav-links">
+      <a mat-button href="#">hombre</a>
+      <a mat-button href="#">mujer</a>
+      <a mat-button href="#">accesorios</a>
+      <a mat-button href="#" class="sale">rebajas</a>
+    </div>
+    <span class="spacer"></span>
+    <div class="icons">
+      <button mat-icon-button>
+        <mat-icon>person_outline</mat-icon>
+      </button>
+      <button mat-icon-button>
+        <mat-icon>search</mat-icon>
+      </button>
+      <button mat-icon-button>
+        <mat-icon>shopping_bag</mat-icon>
+      </button>
+    </div>
 </mat-toolbar>
